UIv1.0
-Added base webite

UIv1.1
-Added intro animations
-Added button animations
-Added SimplyPrivate page

UIv1.2
-Added alerts to the project buttons
-changed pop-up text "soon" to "Not Ready"
-Removed text selection

UIv1.3
-Main page animations slower
-Better alerts to project buttons
-Changed pop-up 1 text "Not Ready" to "Preparing..."
-Added transition animation
-Changed text font on SimplyPrivate page
-Changed changed background color on SimplyPrivate page
-Added bubble effect on SimplyPrivate page
-BugFix

UIv1.4
-Pop-up 1 was transformed into a Simplyprivate version info popup about version 3.6
-Popup 2 text was changed "Not Ready" to "Soon"
